# Auth_sprint_2

./: .env.example  .flake8  .gitignore  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml
auth_api/: Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt
auth_api/src/: app.py  wait_for_postgres.py  wsgi_app.py
auth_api/src/api/v1/: check_roles.py  login.py  password.py  profile.py  roles.py  social.py  user.py
auth_api/src/api/v1/socials/: google.py  mail.py  vk.py  yandex.py
auth_api/src/core/: access.py  commands.py  config.py  constants.py  message_constants.py  pagination.py  settings.py  tracer.py
auth_api/src/core/socials/: oauth.py  social_auth.py
auth_api/src/db/: cache.py  cache_engine.py  redis.py
auth_api/src/migrations/versions/: 4535b0dc3079_.py  58c3dcf7bfbb_initial.py  820086c70896_.py  baefed595f0e_initial.py  dbbebd73fbf9_add_social_accounts.py
auth_api/src/models/: user.py
auth_api/src/schemas/: auth.py  profile.py  roles.py  user.py
auth_api/src/swager/: auth.py  components.py  config.py  oauth.py  profile.py  roles.py
auth_api/src/tests/: conftest.py
auth_api/src/tests/fixtures/: db_client.py  mock_socials.py  roles.py  users.py
auth_api/src/tests/functional/: test_auth.py  test_get_roles_by_token.py  test_google.py  test_history.py  test_mail.py  test_password.py  test_profile.py  test_roles.py  test_user_roles.py  test_vk.py  test_yandex.py
auth_api/src/utils/: authentication.py  backoff.py  gen_password.py  limiter.py  model_func.py  parse_user_agent.py
nginx/: nginx.conf
(+7 files in other folders)
